Fix to content overflowing in Budget and Message

--- a/client/src/components/Chat/style.css
+++ b/client/src/components/Chat/style.css
@@ -89,6 +89,7 @@
   height: auto;
   padding: 10px;
   display: flex;
+  margin-bottom: 5px;
 }
 
 .chat-window .chat-body .message .message-content {
@@ -103,6 +104,7 @@
   align-items: center;
   margin-right: 5px;
   margin-left: 5px;
+  padding: 5px;
   padding-right: 20px;
   padding-left: 20px;
   overflow-wrap: break-word;
@@ -148,7 +150,6 @@
 
 .chat-window .chat-footer {
   height: 40px;
-  background-color: #eee;
   border-radius: 15px;
   border-bottom-right-radius: 0;
   border-top-left-radius: 0;
@@ -156,25 +157,27 @@
   display: flex;
   margin: auto;
   margin-bottom: 10px;
+  background-color: #eee;
+
 }
 
 .chat-window .chat-footer input {
   height: 100%;
   flex: 85%;
+  max-width: 85%;
   border: 0;
   border-radius: 1.5rem;
   padding: 0 0.7em;
   font-size: 1em;
   outline: none;
-  background-color: #eee;
-
+  background-color: transparent;
 }
 
 .chat-window .chat-footer button {
   border: 0;
-  display: grid;
   place-items: center;
   cursor: pointer;
+  max-width: 15%;
   flex: 15%;
   height: 100%;
   background: transparent;
